test/functional/dynamic/definitions/route.openshift.io_v1_Route_test_replace.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test
spec:
  to:
    name: test2
    kind: Service
