test/functional/dynamic/definitions/route.openshift.io_v1_RouteList_test.yaml

---
apiVersion: route.openshift.io/v1
kind: RouteList
items:
- metadata:
    name: test-route
  spec:
    to:
      name: test
      kind: Service
- metadata:
    name: test-route2
  spec:
    to:
      name: test2
      kind: Service
