test/functional/dynamic/definitions/v1_DeploymentConfig_test.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: test
spec:
  replicas: 1
  selector:
    name: test
  template:
    metadata:
      labels:
        name: test
    spec:
      containers:
      - name: busybox 
        image: busybox
      imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: arbitrarySecret
      restartPolicy: Always
