test/functional/dynamic/definitions/v1_Pod_test_replace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - image: busybox:1
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
